--- a/CoinGeko2/my-react-app/package.json
+++ b/CoinGeko2/my-react-app/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3"
