--- a/React Native- Ofer Sheli/my-app/tsconfig.json
+++ b/React Native- Ofer Sheli/my-app/tsconfig.json
@@ -11,8 +11,7 @@
   "include": [
     "**/*.ts",
     "**/*.tsx",
-    "**/*.jsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "app/(coffee)/index.jsx"  ]
+, "app/(tabs)/index.jsx"  ]
 }
