--- a/PokemonNewProjcet/Pokemon/package.json
+++ b/PokemonNewProjcet/Pokemon/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.1.7",
+    "@radix-ui/react-progress": "^1.1.3",
+    "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.0.17",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
